# canvas-lms-tui

./: .gitignore  README.md  build.bat  build.sh  go.mod  go.sum  main.go  pyproject.toml  requests.go  savedata.go
.github/workflows/: main.yml
src/: errors.py  main.py  saves.py  utils.py
src/views/: announcements.py  assignment.py  assignments.py  course.py  courses.py  dashboard.py  grades.py  inbox.py  module.py  modules.py  page.py  servers.py  setup.py  submit.py
