[project]
name = "canvas-lms-tui"
version = "0.1.0"
description = "A TUI for canvas LMS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "babel>=2.18.0",
    "html2text>=2025.4.15",
    "inquirerpy>=0.3.4",
    "pip-system-certs>=5.3",
    "pyinstaller>=6.19.0",
    "requests>=2.33.1",
    "rich>=14.3.3",
]
